Opened 13 years ago
Closed 13 years ago
#4942 closed bug (fixed)
KDL on Inode destructor
Reported by: | emitrax | Owned by: | axeld |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | File Systems/BFS | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Although the partition is probably corrupted (BFS partition on USB stick) the kernel should not crash and handle the error more nicely.
The ASSERT is the same as in #2690 but the stack trace is different, that's why I'm opening a new bug.
Stack trace and serial output are attached.
Attachments (2)
Change History (4)
by , 13 years ago
Attachment: | asser double linked list.png added |
---|
by , 13 years ago
Attachment: | serial_link_list.txt added |
---|
comment:1 by , 13 years ago
comment:2 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Fixed in hrev34007 by Axel.
Thanks! Tested.
Note:
See TracTickets
for help on using tickets.
Unfortunately, or interestingly, the bug is reproducible. Trying to mount the stick cause the KDL. So, please let me know if I can gather more info. I can't look into it myself cause I'm at work. ;-)