* Only remove the inode from the Volume::RemovedNodes() list when it has gone   through the VFS. * This fixes bug #4942.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34007 a95241bf-73f2-0310-859d-f6bbb57e9c96